# Yocto

./: GNUMakefile  Makefile.am  README.md  autogen.sh  configure.ac  yocto_lib.c  yocto_test.c  yocto_test.h
